--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/forest.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500"
       rel="stylesheet"
     />
-    <title>臺大樹語 Demo</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/4.0.11/dotdotdot.js"></script> -->
+
+    <title>護樹臺大 Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
